--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,9 @@
 /* GLOBAL STYLES */
+html {
+  /* box-shadow: 30px 30px 0 30px; */
+  padding: 0 30px;
+  box-shadow: 0px 0px 0px 30px #000 inset;
+}
 body {
   font-family: helvetica, arial, sans;
 }
@@ -9,27 +14,106 @@ h1 {
 a {
   color: #f00;
 }
+h2 ~ p {
+  font-size: 0.8em;
+  font-style: italic;
+  margin: 1em auto 0;
+  max-width: 70%;
+  text-align: centre;
+}
 
 /* HEADER STYLES */
-.header-nav {
+.header {
+  background-color: #000;
+  /* height: 300px; */
+  position: fixed;
+  z-index: 20;
+  width: 100%;
+  color: #fff;
+}
+.nav-links {
   float: right;
   padding: 5.5vh 60px 0 0;
 }
-.header-nav > li {
+.nav-links > li {
   display: inline-block;
   margin-left: 1em;
 }
+.nav-links > li ~ li {
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
+  padding-left: 1em;
+}
 .header-nav a {
-  color: #000;
+  color: #fff;
+}
+.nav-links a {
   font-size: 0.8rem;
   font-weight: bold;
   text-decoration: none;
   text-transform: uppercase;
 }
+.nav-links a:hover,
+.nav-links a:active {
+  color: #ed6e2f;
+}
+.header-nav > li:first-child a {
+  color: #ed6e2f;
+}
+.header-nav > li:first-child a:hover {
+  color: #fff;
+}
+.header-logo {
+  background-color: #000;
+  /* top: 50%; */
+  /* left: 1em; */
+  display: block;
+  /* margin: -55px 0 0 -55px; */
+  /* transform: translate(-50%,-50%); */
+  height: 10vh;
+  width: 10vh;
+  position: relative;
+  text-align: center;
+  left: -30px;
+  padding: 10px;
+  box-sizing: border-box;
+}
+.header-logo img {
+  height: 80%;
+  width: auto;
+}
+.header-logo:hover,
+.header-logo:active {
+  /* opacity: 0.5; */
+  background-color: #ed6e2f;
+}
+
+/* FOOTER STYLES */
+.footer {
+  background-color: #000;
+  padding: 10vh 0 15vh;
+  text-align: center;
+}
+.footer img {
+  width: 50px;
+}
+.footer h3 {
+  color: #fff;
+  padding-top: 1.5em;
+  text-transform: uppercase;
+}
+.footer h3 span {
+  color: #aaa;
+}
+.footer-nav a {
+  color: #fff;
+}
+
 /* HERO STYLES */
 .full-hero {
   background-color: #c7dbfc;
   height: 50vh;
+  position: relative;
+  
 }
 
 /* SOCIAL STYLES */
@@ -53,7 +137,12 @@ a {
 .social-list {
   list-style: none;
   padding: 0;
-  text-align: center;
+  /* text-align: center; */
+  text-align: left;
+  bottom: 1em;
+  position: absolute;
+  /* transform: translate(-50%, -50%); */
+  
 }
 .social-list > li {
   display: inline-block;
