include _site content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,9 @@
     <ul class="footer-nav nav-links">
       {% include nav-links.html %}
     </ul>
+    <ul class="footer-socials social-list">
+      {% include social-links.html %}
+    </ul>
   </nav>
   <h3>Learn Enough <span>to be Dangerous</span></h3>
 
