--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -8,7 +8,7 @@
       
       var disqus_config = function () {
       this.page.url = "https://css.hackerk.net";  // Replace PAGE_URL with your page's canonical URL variable
-      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      this.page.identifier = 1; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
       };
       
       (function() { // DON'T EDIT BELOW THIS LINE
