--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,8 +15,8 @@
     <meta property="og:description" content="This is a dangerous site."/>
   {% endif %}
   
-  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/reset.css">
